2007-02-28  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* examples/Makefile.am:
	* examples/hildon-color-button-example.c:
	* examples/hildon-number-editor-example.c: Adding number editor
	example.

	* src/hildon-window.c: Free the list used to detach menus. Fixes the
	MB#1065.

2007-02-19  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* doc/hildon.types:
	* src/Makefile.am:
	* src/hildon-input-mode-hint.h: Removing this file. 
	Now all the input-method related things are declared in gtkenums.h.

	* src/hildon-number-editor.c:
	* src/hildon-range-editor.c:
	* src/hildon-time-editor.c:
	* src/hildon.h: 
	* src/hildon-date-editor.c:
	* src/hildon-get-password-dialog.c: Use the input-mode enums defined
	in gtkenums.h

2007-02-16  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* debian/changelog:
	* src/hildon-code-dialog.c:
	* src/hildon-code-dialog.h: Adding the
	hildon_code_dialog_set_input_sensitive function requested by Santtu
	Lakkala to enable/disable the input on the code dialog.

2007-02-16  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* doc/Makefile.am:
	* doc/hildon-docs.sgml:
	* doc/visual_index.xml: Documentation fixes.
	
	* src/hildon-banner-private.h:
	* src/hildon-banner.c:
	* src/hildon-banner.h: Adding Lucas patch to enable settable timeout
	on the banners and settable icon.
	
	* examples/hildon-banner-example.c: Set timeout manually.

2007-02-15  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-color-chooser-dialog.h:
	* src/hildon-color-chooser.c:
	* src/hildon-program.h: Doc fixes.

2007-02-15  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-time-editor.c: Check before freeing am/pm strings in
	finalize.

	* tests/check-hildon-caption.c: 
	* tests/check-hildon-controlbar.c:
	* tests/check-hildon-date-editor.c:
	* tests/check-hildon-font-selection-dialog.c:
	* tests/check-hildon-note.c: Fixing the tests a little.
