@@ -1,5 +1,10 @@
 2007-02-28  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
 
+	* src/hildon-window.c: When the window name is empty, don't put
+	extra dash there. Fixes NB#47989.
+
+2007-02-28  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
+
 	* examples/Makefile.am:
 	* examples/hildon-color-button-example.c:
 	* examples/hildon-number-editor-example.c: Adding number editor
